# paletizado_ws-simulacion-

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ANALISIS_REPO.md  CAMBIOS_ISAAC_SIM.md  CR20_PHYSICS_CONFIG.md  DEPENDENCIES_ANALYSIS.md  LAUNCH_FILES_ANALYSIS.md  LICENSE  README.md  URDF_ANALYSIS.md  analyze_packages.py  analyze_urdf.py  build_log.txt  build_workspace.sh  dobot_cr20_ros2_configuracion_completa.txt  dobot_docs.txt  ros2_isaac_bridge.py  test_installation.sh  test_results.txt  verification_updated.txt  verify_isaac_setup.sh
.github/: copilot_instructions.md
Modelo/: CR20V_isaac.usd
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
install/: local_setup.sh  setup.sh
install/cr10_moveit/share/cr10_moveit/: package.sh  package.xml
install/cr10_moveit/share/cr10_moveit/cmake/: cr10_moveitConfig.cmake
install/cr12_moveit/share/cr12_moveit/: local_setup.sh  package.sh
install/cr16_moveit/share/cr16_moveit/: package.sh
install/cr16_moveit/share/cr16_moveit/cmake/: cr16_moveitConfig.cmake
install/cr20_moveit/share/cr20_moveit/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cr20_moveit/share/cr20_moveit/cmake/: cr20_moveitConfig-version.cmake  (+1 more)
install/cr30h_moveit/share/cr30h_moveit/: local_setup.sh  package.sh
install/cr3_moveit/share/cr3_moveit/: local_setup.sh  package.sh
install/cr5_moveit/share/cr5_moveit/: package.sh
install/cr7_moveit/share/cr7_moveit/: package.sh  package.xml
install/cr_robot_ros2/share/cr_robot_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cra_description/share/cra_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dobot_demo/lib/dobot_demo/: demo
install/dobot_demo/share/dobot_demo/: package.dsv  package.ps1  package.sh  package.xml
install/dobot_gazebo/share/dobot_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dobot_moveit/lib/dobot_moveit/: action_move_server  joint_states
install/dobot_moveit/share/dobot_moveit/: package.dsv  package.ps1  package.sh  package.xml
install/dobot_msgs_v4/share/dobot_msgs_v4/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dobot_rviz/share/dobot_rviz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dobot_vision/lib/dobot_vision/: pose_publisher  vision_display
install/dobot_vision/share/dobot_vision/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/me6_moveit/share/me6_moveit/: package.sh  package.xml
install/nova2_moveit/share/nova2_moveit/: local_setup.sh  package.sh
install/nova5_moveit/share/nova5_moveit/: package.sh  package.xml
install/servo_action/lib/servo_action/: Joint_Position  action_move_client
install/servo_action/share/servo_action/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
src/DOBOT_6Axis_ROS2_V4/cr16_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V4/cr20_moveit/: CMakeLists.txt  package.xml
src/DOBOT_6Axis_ROS2_V4/cr20_moveit/config/: joint_limits.yaml
src/DOBOT_6Axis_ROS2_V4/cr20_moveit/launch/: dobot_moveit.launch.py  isaac_sim.launch.py
src/DOBOT_6Axis_ROS2_V4/cr20_moveit/scripts/: cr20_isaac_bridge_node.py
src/DOBOT_6Axis_ROS2_V4/cr30h_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V4/cr5_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V4/cra_description/urdf/: camera_ceiling.urdf.xacro  cr20_robot.urdf  cr20_robot.xacro  d435i_with_gazebo.urdf.xacro
src/DOBOT_6Axis_ROS2_V4/dobot_bringup_v4/: CMakeLists.txt  package.xml
src/DOBOT_6Axis_ROS2_V4/dobot_gazebo/: CMakeLists.txt
src/DOBOT_6Axis_ROS2_V4/dobot_gazebo/launch/: dobot_gazebo.launch.py
src/DOBOT_6Axis_ROS2_V4/dobot_gazebo/models/apriltags/: tag_10.sdf  tag_11.sdf  tag_12.sdf  tag_13.sdf
src/DOBOT_6Axis_ROS2_V4/dobot_gazebo/models/launch/: dobot_gazebo.launch.py  gazebo_moveit.launch.py  gazebo_with_camera.launch.py  palletizing_sim.launch.py
src/DOBOT_6Axis_ROS2_V4/dobot_gazebo/models/realsense_d435i/: model.config  model.sdf
src/DOBOT_6Axis_ROS2_V4/dobot_gazebo/worlds/: cr.sdf  minimal_calibration.sdf  palletizing.sdf
src/DOBOT_6Axis_ROS2_V4/dobot_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V4/dobot_msgs_v4/: package.xml
src/DOBOT_6Axis_ROS2_V4/dobot_vision/: package.xml  setup.cfg  setup.py
src/DOBOT_6Axis_ROS2_V4/dobot_vision/config/: tags_36h11.yaml  vision_params.yaml
src/DOBOT_6Axis_ROS2_V4/dobot_vision/dobot_vision/: __init__.py  calibration_node.py  pose_publisher.py  vision_display.py
src/DOBOT_6Axis_ROS2_V4/dobot_vision/launch/: calibration.launch.py  vision_real.launch.py  vision_sim.launch.py
src/gz_conveyorbelt/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/gz_conveyorbelt/config/: bridge_scripted.yaml
src/gz_conveyorbelt/gz_conveyorbelt/: conveyor_logic_controller.py
src/gz_conveyorbelt/include/gz_conveyorbelt/: ConveyorBeltPlugin.hpp
src/gz_conveyorbelt/launch/: conveyor_demo.launch.py  conveyor_test.launch.py
src/gz_conveyorbelt/plugins/: ConveyorBeltPlugin.sdf
src/gz_conveyorbelt/scripts/: conveyor_controller.py  run_conveyor_demo.sh
src/gz_conveyorbelt/src/: ConveyorBeltPlugin.cpp
src/gz_conveyorbelt/worlds/: conveyor_demo.sdf  conveyor_test.sdf
src/pruebas_de_vision/: README.md  package.xml  setup.cfg  setup.py
src/pruebas_de_vision/launch/: camera_test.launch.py  conveyor_belt.launch.py  dynamic_boxes.launch.py  yolo_detection.launch.py  yolo_detection_venv.launch.py
src/pruebas_de_vision/pruebas_de_vision/: __init__.py  box_mover.py  camera_viewer.py  conveyor_controller.py  train_yolo.py  yolo_detector.py
src/pruebas_de_vision/scripts/: run_conveyor.sh  run_yolo_detector_venv.sh  run_yolo_vision.sh  train_yolo_venv.sh
src/pruebas_de_vision/worlds/: camera_test.sdf  conveyor_belt.sdf  conveyor_simple.sdf  dynamic_boxes.sdf
(+2327 files in other folders)
